--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ nbformat==4.4.0
 notebook==5.7.8
 numpy==1.16.5
 oauthlib==3.1.0
-object-detection==0.1
+object-detection
 opt-einsum==2.3.2
 pandocfilters==1.4.2
 pathlib2==2.3.5
