--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ enum34==1.1.6
 Flask==1.1.1
 funcsigs==1.0.2
 gast==0.2.2
+google
 google-auth==1.7.2
 google-auth-oauthlib==0.4.1
 google-pasta==0.1.8
@@ -87,7 +88,7 @@ singledispatch==3.4.0.3
 six==1.13.0
 subprocess32==3.5.4
 tensorboard==1.15.0
-tensorflow==1.14.0
+tensorflow==1.15.0
 tensorflow-estimator==1.15.1
 termcolor==1.1.0
 terminado==0.8.3
