--- a/requirements.txt
+++ b/requirements.txt
@@ -88,7 +88,7 @@ singledispatch==3.4.0.3
 six==1.13.0
 subprocess32==3.5.4
 tensorboard==1.15.0
-tensorflow-cpu==1.15.0
+tensorflow==2.0.0
 tensorflow-estimator==1.15.1
 termcolor==1.1.0
 terminado==0.8.3
